src/objects/Bid__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <formula>TEXT( Locality__r.zzdelArea__c )</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This bid&apos;s Business Development Manager</inlineHelpText>
        <label>BDM</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>BDM</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>Regional Management -</value>
            </filterItems>
            <infoMessage>Please select a Business Development Manager</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_value__c</fullName>
        <label>Bid value</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <formula>TEXT( Locality__r.Region_Alztrading__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locality or Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <infoMessage>Select a Society office</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_potential_funder__c</fullName>
        <label>Name of potential funder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The approved proposal that led to this bid.</description>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Outcome__c</fullName>
        <inlineHelpText>Fill in this field only if the bid is Unsuccessful</inlineHelpText>
        <label>Reason for Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_of_service_date__c</fullName>
        <label>Start of service date</label>
        <type>Date</type>
    </fields>
    <label>Bid</label>
    <listViews>
        <fullName>Bids_awaiting_outcome</fullName>
        <columns>NAME</columns>
        <columns>Bid_value__c</columns>
        <columns>BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Outcome__c</field>
            <operation>notEqual</operation>
            <value>Successful,Unsuccessful</value>
        </filters>
        <label>Bids awaiting outcome</label>
    </listViews>
    <listViews>
        <fullName>Successful_bids</fullName>
        <columns>NAME</columns>
        <columns>Bid_value__c</columns>
        <columns>BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Outcome__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </filters>
        <label>Successful bids</label>
    </listViews>
    <listViews>
        <fullName>Unsuccessful_bids</fullName>
        <columns>NAME</columns>
        <columns>Bid_value__c</columns>
        <columns>BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Outcome__c</field>
            <operation>equals</operation>
            <value>Unsuccessful</value>
        </filters>
        <label>Unsuccessful bids</label>
    </listViews>
    <nameField>
        <label>Bid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
    </sharingReasons>
</CustomObject>